<resources>
    <string name="app_name">Sensor Mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="config">Configuración</string>
    <string name="acercaDe">Acerca de</string>
    <string name="inicio">Inicio</string>
    <string name="teoria">Teoría</string>
    <string name="explicacion">\nDiseñada y creada por los autores: Diego Esteban Moreno y Félix Huete García, como proyecto final de carrera para la Universidad de Valladolid de la titulación Ingeniería Técnica de Informática de Sistemas.\n
\nComo tutores Miguel Ángel González Rebollo (Departamento de Física de la Materia Condensada) y Manuel Ángel González Delgado (Departamento de Física Aplicada), del Grupo de Innovación Docente TIA (Tecnología, Innovación y Aprendizaje).\n
La  traducción al portugués ha sido realizada por  W.Rochadel y J.B. da Silva de la Universidade Federal de Santa Catarina (Brasil).\n
La traducción al francés ha sido realizada por  M. Skouri y D. Goudjami, de la Université Cadi_Ayyad, Marrakech (Marruecos).\n</string>
    <string name="explicacionacercade2">La aplicación utiliza los sensores disponibles en los dispositivos (acelerómetro, giroscopio, magnetómetro, sensor de luz, sensor aproximación y GPS) como herramientas de medida en los laboratorios de física.\n</string>
    <string name="explicacionacercade">Sensor Mobile es una aplicación diseñada como un visor y monitor de los sensores de su dispositivo Android.\n</string>
    <string name="medicion">Medición de datos</string>
    <string name="aceleracion">Aceleración</string>
    <string name="velocidad">Velocidad angular</string>
    <string name="magnetismo">Inducción magnética</string>
    <string name="sensor">Sensor</string>
    <string name="nombresensor">Nombre</string>
    <string name="consumo">Consumo batería</string>
    <string name="version">Versión</string>
    <string name="distribuidor">Distribuidor</string>
    <string name="idiomas">IDIOMAS</string>
    <string name="empezar">Empezar</string>
    <string name="continuar">Continuar</string>
    <string name="parar">Pausar/Parar</string>
    <string name="acelerometro">Acelerómetro</string>
    <string name="luminosidad">Sensor de luz</string>
    <string name="proximidad">Sensor proximidad</string>
    <string name="giroscopio">Giroscopio</string>
    <string name="magnetico">Magnetómetro</string>
    <string name="compartir">Compartir</string>
    <string name="guardar">Guardar (csv)</string>
    <string name="guardado_acelerometro">Acelerómetro guardado</string>
    <string name="error_guardar">Error al guardar, no guardado</string>
    <string name="eje_x">X</string>
    <string name="eje_y">Y</string>
    <string name="eje_z">Z</string>
    <string name="eje_modulo">Módulo</string>
    <string name="distancia">Distancia</string>
    <string name="luminosi">Iluminancia</string>
    <string name="unidad_acelerometro">m/s²</string>
    <string name="tiempo">TIEMPO DE GRABACIÓN</string>
    <string name="frecuencias">FRECUENCIA DE MUESTREO</string>
    <string name="temporizador">TEMPORIZADOR</string>
    <string name="lento">LENTO</string>
    <string name="normal">NORMAL</string>
    <string name="rapido">RÁPIDO</string>
    <string name="muyrapido">MUY RÁPIDO</string>
    <string name="apagado">DESACTIVADO</string>
    <string name="auto">AUTO</string>
    <string name="espa">ESPAÑOL</string>
    <string name="ingles">INGLÉS</string>
    <string name="frances">FRANCÉS</string>
    <string name="portugues">PORTUGUÉS</string>
    <string name="subidioma">Seleccione el lenguaje de la aplicación.</string>
    <string name="subfrecuencia">Elija la frecuencia de los sensores, número de muestras por segundo.</string>
    <string name="subtemporizador">Seleccione el tiempo desde que se inicia la pantalla de la gráfica hasta que comienza a tomar datos.</string>
    <string name="subtiempo">Seleccione el tiempo que durará la grabación</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="grafica">Gráfica</string>
    <string name="cargargraficas">Cargar gráficas</string>
    <string name="checkAcelerometro">Guardar datos</string>
    <string name="checkGiroscopio">Guardar datos</string>
    <string name="checkMagnetometro">Guardar datos</string>
    <string name="checkLuz">Guardar datos</string>
    <string name="checkProximidad">Guardar datos</string>
    <string name="unidad_giroscopio">rad/s</string>
    <string name="unidad_campo_magnetico">µT</string>
    <string name="unidad_luz">Lux</string>
    <string name="unidad_proximidad">cm</string>
    <string name="guardado_giroscopio">Giroscopio guardado</string>
    <string name="guardado_magnetometro">Magnetómetro guardado</string>
    <string name="guardar_luz">Sensor de luz guardado</string>
    <string name="guardar_proximidad">Sensor de proximidad guardado</string>
    <string name="guardado_gps">GPS guardado</string>
    <string name="sensores">Sensores del dispositivo</string>
    <string name="datosCompartir">No hay datos para compartir</string>
    <string name="datosGuardar">No hay datos para guardar</string>
    <string name="tiempoSeg">Tiempo en segundos</string>
    <string name="titulo1">\n¿QUÉ ES EL ACELERÓMETRO?\n</string>
    <string name="explicacion1">Es un dispositivo que mide la aceleración, es decir la variación de la velocidad de un objeto. Permite medir también la aceleración de la gravedad.\n 
        Esta magnitud se mide en metros por segundo al cuadrado (m/s2) o en unidades G (asumiendo un valor de g =9.8 m/s2).\n</string>
    <string name="titulo2">¿CÓMO FUNCIONA EL ACELERÓMETRO?\n</string>
    <string name="explicacion2">Los acelerómetros utilizados en los teléfonos móviles son dispositivos tipo MEMS (Sistemas Microelectromecánicos) construidos en un chip de Silicio, Su principio de funcionamiento consiste en medir la variación de la capacidad de un condensador integrado por dos placas metálicas, una enfrente de la otra, y por un material dieléctrico.\n
Una de esas placas es móvil, de forma que cuando se aplique una fuerza sobre el dispositivo, la capacidad del condensador cambiará. Se hará mayor o menor en función del movimiento.\n
El sensor medirá la variación de la capacidad que será proporcional a la fuerza aplicada y enviará esa información al microprocesador del dispositivo para que determine la aceleración a la que ha sido sometido. El microprocesador lo guarda en una base de datos donde los comparará con otros valores de referencia, correspondientes a una fuerza y a una aceleración determinadas.\n
Al ser la aceleración una magnitud vectorial para determinarla necesitaremos los valores de sus componentes en las tres direcciones x, y, z, por lo que en realidad existen tres dispositivos como el señalado en cada una de las direcciones correspondientes. \n</string>
    <string name="titulo3">\n¿PARA QUÉ SIRVE EL ACELERÓMETRO?\n</string>
    <string name="explicacion3">Un acelerómetro permite detectar la orientación del móvil para poder girar la pantalla.\n</string>
    <string name="titulo4">¿QUÉ DATOS NOS MUESTRA?\n</string>
    <string name="explicacion4">El acelerómetro mide la aceleración aplicada al dispositivo y sus propiedades se resumen en la tabla.\n</string>
    <string name="titulogiro1">\n¿QUÉ ES EL GIROSCOPIO?\n</string>
    <string name="explicaciongiro1">Un giroscopio es un dispositivo mecánico que nos ayuda a medir, mantener o cambiar la orientación de algún dispositivo. Permite medir la velocidad de rotación (rad/s).\n</string>
    <string name="titulogiro2">¿CÓMO FUNCIONA EL GIROSCOPIO?\n</string>
    <string name="explicaciongiro2">Los giróscopos utilizados en los teléfonos móviles son dispositivos tipo MEMS (Sistemas Microelectromecánicos) construidos en un chip de Silicio, Su principio de funcionamiento consiste en medir la variación de la capacidad de un condensador cuando por efecto de un giro se desplaza una pequeña masa integrada en él.\n
El giroscopio una vez puesto en movimiento mantiene siempre la orientación precisa respecto al punto de partida.\n
Al ser la velocidad angular una magnitud vectorial para determinarla necesitaremos los valores de sus componentes en las tres direcciones x, y, z.\n</string>
    <string name="titulogiro3">¿PARA QUÉ SIRVE EL GIROSCOPIO?\n</string>
    <string name="explicaciongiro3">Una de las funciones que desempeña el giroscopio es monitorizar el posible giro de nuestra pantalla.\n</string>
    <string name="titulogiro4">¿QUE DATOS NOS MUESTRA?\n</string>
    <string name="explicaciongiro4">El giroscopio mide la velocidad de rotación (w) del dispositivo alrededor de los ejes x, y, z (rad/s). Los valores de los datos del giroscopio pueden ser positivos o negativos. Si la rotación se produce en dirección contraria a las manecillas de un reloj alrededor del eje, el valor es positivo; en caso contrario, el valor es negativo.\n</string>
    <string name="titulomagne1">\n¿QUE ES EL MAGNETÓMETRO?\n</string>
    <string name="explicacionmagne1">Se trata de un componente electrónico capaz de medir y cuantificar la intensidad de campo magnético (µT).\n</string>
    <string name="titulomagne2">¿CÓMO FUNCIONA EL MAGNETÓMETRO?\n</string>
    <string name="explicacionmagne2">Básicamente es un electroimán típico con un núcleo de hierro con una bobina de alambre enrollada.\n
El magnetismo varía según el lugar debido a las diferencias en el campo magnético terrestre (la magnetosfera) y puede ser causada por las diferentes naturalezas de las rocas. Los magnetómetros son un componente instrumental frecuente de naves espaciales y para la exploración geológica en busca de estructuras anticlinales.\n
Al ser el campo magnético una magnitud vectorial para determinarla necesitaremos los valores de sus componentes en las tres direcciones x, y, z, por lo que en realidad existen tres dispositivos como el señalado en las tres direcciones correspondientes.\n</string>
    <string name="titulomagne3">¿PARA QUÉ SIRVE EL MAGNETÓMETRO?\n</string>
    <string name="explicacionmange3">Además de como brújula, puede servir también para utilizar el dispositivo como detector de metales.\n</string>
    <string name="titulomagne4">¿QUÉ DATOS NOS MUESTRA EL MAGNETÓMETRO?\n</string>
    <string name="tituloprox1">\n¿QUÉ ES EL SENSOR DE PROXIMIDAD?\n</string>
    <string name="explicacionprox1">Se trata de un sensor capaz de detectar objetos situados a una distancia mínima respecto de él. Esa distancia depende de las características del sensor y viene expresada en centímetros (cm).\n</string>
    <string name="tituloprox2">¿CÓMO FUNCIONA EL SENSOR DE PROXIMIDAD?\n</string>
    <string name="explicacionprox2">Estos sensores de proximidad se basan en un LED infrarrojo y también en un receptor IR. En el momento en que delante del dispositivo haya algún objeto situado a una determinada distancia mínima, la luz infrarroja emitida por el LED es reflejada y captada por el receptor IR, permitiendo al sistema la detección de ese objeto.\n</string>
    <string name="tituloprox3">¿PARA QUÉ SIRVE EL SENSOR DE PROXIMIDAD?\n</string>
    <string name="explicacionprox3">Cuando acercamos el equipo a nuestra oreja para contestar una llamada, el dispositivo apaga la luz de la pantalla para ahorrar batería además desactiva su sensibilidad táctil para evitar acciones no deseadas.\n</string>
    <string name="tituloprox4">¿QUE DATOS NOS MUESTRA EL SENSOR DE PROXIMIDAD?\n</string>
    <string name="explicacionprox4">El dispositivo indica si hay algún objeto situado en una posición inferior a una determinada distancia: detectará si el usuario sostiene el dispositivo cerca (consultar tabla); por lo tanto, podrá determinar si el usuario se encuentra en una llamada telefónica y podrá apagar la pantalla durante la llamada telefónica.\n</string>
</resources>