<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/guardar"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/guardar">
    </item>
    <item
        android:id="@+id/enviar"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/compartir">
    </item>
    <item
        android:id="@+id/acele"
        android:title="@string/acelerometro">
    </item>
    <item
        android:id="@+id/giro"
        android:title="@string/giroscopio">
    </item>
    <item
        android:id="@+id/mag"
        android:title="@string/magnetico">
    </item>
    <item
        android:id="@+id/proxi"
        android:title="@string/proximidad">
    </item>
    <item
        android:id="@+id/luz"
        android:title="@string/luminosidad">
    </item>

</menu>