<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="mis_preferencias" >

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/idiomas"
        android:entryValues="@array/idiomasValores"
        android:key="idioma"
        android:summary="Selecciona el lenguaje de la aplicación"
        android:title="Idioma" />

    <PreferenceCategory android:title="@string/config" >
        <ListPreference
            android:defaultValue="SensorManager.SENSOR_DELAY_NORMAL"
            android:entries="@array/frecuencia_recogida"
            android:entryValues="@array/frecuencias"
            android:key="frecuencia"
            android:summary="Elige una frecuencia de los sensores, número de muestras por segundo."
            android:title="@string/frecuencias" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/temporizador"
            android:entryValues="@array/temporizadoropciones"
            android:key="temporizador"
            android:title="@string/temporizador" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/tiempograbacion"
            android:entryValues="@array/opcionestiempograbacion"
            android:key="tiempo"
            android:summary="Selecciona el tiempo que durará la grabación."
            android:title="@string/tiempo" />
    </PreferenceCategory>

</PreferenceScreen>