<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.app.MainActivity" 
    android:background="@drawable/pmenu">

    <Button
        android:id="@+id/medicion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/sensoresdisponibles"
        android:text="@string/medicion" />

    <Button
        android:id="@+id/teoria"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/medicion"
        android:text="@string/teoria" />

    <Button
        android:id="@+id/sensoresdisponibles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="@string/sensores"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/cargargrafica"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/teoria"
        android:text="@string/cargargraficas" />

</RelativeLayout>
